# metal-cpp-extension

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
src/Metal/: MTLAccelerationStructureTypes.hpp  MTLCaptureScope.hpp  MTLDefines.hpp
src/QuartzCore/: CADefines.hpp  CAMetalDrawable.hpp  CAMetalLayer.hpp
